--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.13.0",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,7 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
 }
